--- a/package.json
+++ b/package.json
@@ -58,27 +58,28 @@
     "react-dom": "^16.3.2",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
-    "tslib": "^1.9.0"
+    "tslib": "^1.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^6.2.0",
     "@commitlint/config-conventional": "^6.1.3",
-    "@gago/stylelint-config": "^1.0.2",
-    "@gago/tslint-config-react": "^1.1.1",
-    "@types/node": "^8.10.12",
-    "@types/react": "^16.3.13",
+    "@gago/stylelint-config": "^1.0.3",
+    "@gago/tslint-config-react": "^1.2.1",
+    "@types/node": "^8.10.15",
+    "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
     "@types/react-hot-loader": "^3.0.6",
-    "@types/react-loadable": "^5.3.4",
+    "@types/react-loadable": "^5.4.0",
     "@types/react-router-dom": "^4.2.6",
-    "@types/webpack": "^4.1.4",
-    "autoprefixer": "^8.4.1",
+    "@types/webpack": "^4.1.7",
+    "autoprefixer": "^8.5.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.0.0-rc.2",
+    "husky": "^1.0.0-rc.6",
     "imagemin-lint-staged": "^0.3.0",
     "lint-staged": "^7.1.0",
     "mini-css-extract-plugin": "^0.4.0",
@@ -93,6 +94,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "stylelint": "^9.2.0",
+    "ts-import-plugin": "^1.4.4",
     "ts-loader": "^4.3.0",
     "ts-node": "^6.0.3",
     "tsconfig-paths": "^3.3.2",
@@ -100,7 +102,7 @@
     "typescript": "^2.8.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.1",
+    "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
   }
