--- a/package.json
+++ b/package.json
@@ -51,59 +51,59 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "antd": "^3.6.1",
     "axios": "^0.18.0",
-    "core-js": "^2.5.6",
-    "normalize.css": "^8.0.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "core-js": "^2.5.7",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-loadable": "^5.4.0",
     "react-router-dom": "^4.2.2",
-    "tslib": "^1.9.1"
+    "tslib": "^1.9.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^6.2.0",
-    "@commitlint/config-conventional": "^6.1.3",
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
     "@gago/stylelint-config": "^1.0.3",
-    "@gago/tslint-config-react": "^1.2.1",
-    "@types/node": "^8.10.15",
-    "@types/react": "^16.3.14",
+    "@gago/tslint-config-react": "^1.2.2",
+    "@types/node": "^8.10.18",
+    "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
     "@types/react-hot-loader": "^3.0.6",
     "@types/react-loadable": "^5.4.0",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/webpack": "^4.1.7",
-    "autoprefixer": "^8.5.0",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/webpack": "^4.4.0",
+    "autoprefixer": "^8.6.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
-    "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "fork-ts-checker-webpack-plugin": "^0.4.2",
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.0.0-rc.6",
+    "husky": "^1.0.0-rc.8",
     "imagemin-lint-staged": "^0.3.0",
-    "lint-staged": "^7.1.0",
+    "lint-staged": "^7.1.3",
     "mini-css-extract-plugin": "^0.4.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-extend-rule": "^1.1.0",
+    "postcss-extend-rule": "^2.0.0",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
+    "postcss-preset-env": "^5.1.0",
     "postcss-utilities": "^0.8.0",
     "react-hot-loader": "^3.1.3",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
-    "stylelint": "^9.2.0",
-    "ts-import-plugin": "^1.4.4",
-    "ts-loader": "^4.3.0",
-    "ts-node": "^6.0.3",
+    "stylelint": "^9.2.1",
+    "ts-import-plugin": "^1.5.0",
+    "ts-loader": "^4.3.1",
+    "ts-node": "^6.1.0",
     "tsconfig-paths": "^3.3.2",
     "tslint": "^5.10.0",
-    "typescript": "^2.8.3",
+    "typescript": "^2.9.1",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1",
     "webpack-dev-server": "^3.1.4"
   }
 }
