chore(stylelint): add ignore files

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,8 +4,10 @@
   ],
   "ignoreFiles": [
     "node_modules/**/*.css",
-    "node_modules/**/*/scss",
+    "node_modules/**/*.scss",
+    "node_modules/**/*.less",
     "dist/**/*.css",
+    "**/*.tsx",
     "**/*.html",
     "**/*.md"
   ]
